crates/kaban-parser/tests/snapshots/errors__hanging_braces.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: { let x = 10

Block []

errors!: [
    ExpectedToken(
        Semicolon,
    ),
    ExpectedToken(
        RightBrace,
    ),
]
