crates/kaban-parser/tests/snapshots/errors__hanging_infix_operator.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: x.

Block []

errors!: [
    ExpectedExpression,
]
