crates/kaban-parser/tests/snapshots/errors__missing_parenthesis_on_if.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: if x == 10 {}

Block []

errors!: [
    ParseError at 3: LeftParen expected! found Identifier instead,
]
