crates/kaban-parser/tests/snapshots/errors__missing_semicolon.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: x = 10

Block []

errors!: [
    ParseError at 6: Semicolon expected! found EOF instead,
]
