crates/kaban-parser/tests/snapshots/errors__missing_single_parenthesis_on_if.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: if x == 10) {}

Block []

errors!: [
    ExpectedToken(
        LeftParen,
    ),
]
