crates/kaban-parser/tests/snapshots/errors__semicolon_on_block.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: {};

Block [
    Block [],
]

warnings!: [
    ParseWarning at 2: Semicolon is unecessary here,
]
