crates/kaban-parser/tests/snapshots/errors__semicolon_on_nested_block_expression.snap
---
source: crates/kaban-parser/tests/errors.rs
expression: print
---
input: { let x = { let y = 10; pass y + 1; }; pass x; };

Block [
    Block [
        Let {
            name: IdentifierBinding {
                name: Identifier("x"),
                mutable: false,
            },
            assignment: Block [
                Let {
                    name: IdentifierBinding {
                        name: Identifier("y"),
                        mutable: false,
                    },
                    assignment: IntLit("10"),
                },
                Pass(
                    Add {
                        left: Identifier("y"),
                        right: IntLit("1"),
                    },
                ),
            ],
        },
        Pass(
            Identifier("x"),
        ),
    ],
]

errors!: [
    ParseError at 37: Expressions expected! found Semicolon instead,
    ParseError at 48: Expressions expected! found Semicolon instead,
]
